<resources>
    <string name="app_name">Stylist</string>
    <string name="main">STYLIST</string>
    <string name="closet">CLOSET</string>
    <string name="runway">RUNWAY</string>
    <string name="about_us">ABOUT US</string>
    <string name="tops">TOPS</string>
    <string name="bottoms">BOTTOMS</string>
    <string name="collection">COLLECTION</string>
    <string name="home_text">Home</string>
    <string name="closet_text">Closet</string>
    <string name="runway_text">Runway</string>
    <string name="collection_text">Collection</string>
    <string name="model_text">Model</string>
    <string name="info_text">About us</string>
    <string name="tops_text">Tops</string>
    <string name="bottoms_text">Bottoms</string>
    <string name="dresses_text">Dresses</string>
    <string name="shoes_text">Shoes</string>
    <string name="accessories_text">Accessories</string>
    <string name="photo">PHOTO</string>
</resources>
