<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/closet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/closet"
        android:textSize="50sp"
        android:background="@color/main_color"
        android:gravity="center"/>
    <Button
        android:id="@+id/button_closet_tops"
        android:text="@string/tops_text"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_above="@+id/button_closet_bottoms"
        android:background="@drawable/button_bordered_rounded"
        android:drawablePadding="-15sp"
        android:drawableLeft="@drawable/shirt" />

    <Button
        android:id="@+id/button_closet_bottoms"
        android:text="@string/bottoms_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/main_color"
        android:drawableLeft="@drawable/bottom"/>

</RelativeLayout>
